# tauri-plugin-webauthn

./: .gitignore  .gitmodules  .oxlintrc.json  .prettierignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  devenv.nix  package.json  release-plz.toml  renovate.json  rollup.config.js
.github/: dependabot.yml
.github/workflows/: auto-merge.yml  checks.yml  release.yml
android/: build.gradle.kts
android/gradle/wrapper/: gradle-wrapper.properties
android/src/androidTest/java/: ExampleInstrumentedTest.kt
android/src/main/java/: Example.kt  ExamplePlugin.kt  WebauthnPlugin.kt
android/src/test/java/: ExampleUnitTest.kt
examples/webauthn/: package.json  vite.config.js
examples/webauthn/src-tauri/: CHANGELOG.md  Cargo.toml
examples/webauthn/src-tauri/capabilities/: default.json
examples/webauthn/src-tauri/src/: lib.rs  main.rs
examples/webauthn/src/routes/: +page.svelte
guest-js/: index.ts
macos/: Package.swift  README.md
macos/Sources/WebauthnBridge/: Exports.swift  PasskeyHandler.swift
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: select_key.toml  send_pin.toml
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
src/authenticators/: macos.rs  mobile.rs  mod.rs  windows.rs
src/authenticators/ctap2/: event.rs  mod.rs  platform.rs
src/desktop/: ctap2.rs  mod.rs
