[workspace]
members = ["examples/webauthn/src-tauri"]

[package]
name = "tauri-plugin-webauthn"
version = "0.1.1"
authors = ["profidev"]
description = "a Tauri plugin for WebAuthn"
license = "MIT"
repository = "https://github.com/Profiidev/tauri-plugin-webauthn"
edition = "2021"
rust-version = "1.81"
exclude = [
  "/examples",
  "/dist-js",
  "/guest-js",
  "/node_modules",
  "/.github",
  "/.vscode",
]
links = "tauri-plugin-webauthn"

[dependencies]
tauri = { version = "2.5.0" }
serde = "1.0"
thiserror = "2"
webauthn-rs-proto = "0.5.0"
log = { version = "0.4.27", optional = true }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["sync"] }

[build-dependencies]
tauri-plugin = { version = "2.2.0", features = ["build"] }

[features]
default = ["log"]
log = ["dep:log"]

[target.'cfg(target_os = "linux")'.dependencies]
authenticator = { version = "0.4.1", default-features = false, features = [
  "crypto_openssl",
] }
serde_cbor_2 = "0.12.0-dev"
openssl = "0.10.72"
base64urlsafedata = "0.5.1"
base64 = "0.22.1"
futures = "0.3.31"

[target.'cfg(windows)'.dependencies]
webauthn-authenticator-rs = { version = "0.5.0", features = [
  "nfc",
  "usb",
  "win10",
] }
